# PythonBaseAPI

./: Makefile  README.md  pyproject.toml
docker/: Dockerfile  docker-compose.yml
src/app/: main.py
src/tests/: test_main.py
