[tool.poetry]
name = "pythonbaseapi"
version = "0.1.0"
description = "Python API base image"
authors = ["Lounès ACHAB <lounes.achab@gmail.com>"]
license = "GNU General Public License v3.0"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.62.0"
uvicorn = "^0.13.0"
gunicorn = "^20.0.4"
uvloop = "^0.14.0"
httptools = "^0.1.1"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
pre-commit = "^2.9.3"
flake8 = "^3.8.4"
mypy = "^0.790"
vulture = "^2.1"
bandit = "^1.6.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
